# AM_Wstep_Do_Programowania

./: CMakeLists.txt
Fibonacci/: fibonacci.cpp
a+b/: a+b.cpp
alkohol/: alkohol.cpp
choinka/: choinka.cpp
funkcje/: funkcje.cpp
kwadratowa/: kwadratowa.cpp
odd/: odd.cpp
podatki/: podatki.cpp
witaj świecie/: hello.c  hello.cpp
zaliczenie/: zadanie1.cpp  zadanie3.cpp  zadannie2.cpp
