cmake_minimum_required(VERSION 3.20)
project(AM_Wstep_Do_Programowania)

set(CMAKE_CXX_STANDARD 23)

add_executable(AM_Wstep_Do_Programowania "witaj świecie/hello.cpp" a+b/a+b.cpp kwadratowa/kwadratowa.cpp alkohol/alkohol.cpp podatki/podatki.cpp odd/odd.cpp funkcje/funkcje.cpp "witaj świecie/hello.c" Fibonacci/fibonacci.cpp choinka/choinka.cpp zaliczenie/zadanie1.cpp zaliczenie/zadannie2.cpp zaliczenie/zadanie3.cpp)
